infra/fluxcd/kibana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana
  namespace: 360-noscope
spec:
  ingressClassName: nginx-external
  rules:
  - host: kibana.360.natron.cloud
    http:
      paths:
      - backend:
          service:
            name: kibana-kb-http
            port:
              number: 5601
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kibana.360.natron.cloud
    secretName: tls-kibana-360-natron-cloud
